--- a/StyleSheet/dark/FluVNavigationSearchItem.qss
+++ b/StyleSheet/dark/FluVNavigationSearchItem.qss
@@ -9,7 +9,7 @@ FluNavigationSearchItem[isLong=false]:hover {
     border-radius: 4px;
 }
 
-#searchButton {
+#autoSuggestBox {
     background-color: transparent;
     border:1px solid transparent;
 }
